fixing overflows

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 7rem;
     margin-top: 4rem;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .menu li {
@@ -20,7 +20,7 @@
     width: 80px;
     font-size: 15px;
     text-overflow: ellipsis;
-    overflow-x:hidden;
+    overflow:hidden;
     white-space:nowrap
 }
 
